--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,135 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
-
+import Button from "../components/button.astro";
+import Footer from "../layouts/Footer.astro";
+import Header from "../layouts/Header.astro";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-
-</Layout>
+<style>
+  /* content */
+  .container__footer--content {
+    width: 100%;
+    height: 400px;
+    background-color: rgb(19 111 254);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+  }
+  .container__footer--content .footer--content--title {
+    margin-top: 100px;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .container__footer--content .footer--content--desc {
+    color: white;
+    font-size: 1.2rem;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 2;
+  }
+  /* body--content */
+  .container__body--content {
+    padding-left: 20px;
+    margin-top: 100px;
+  }
+  .body--content--title {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin-bottom: 10px;
+  }
+  .body--content--desc {
+    width: 300px;
+    line-height: 1.5;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 1.2rem;
+  }
+  .body--content--list {
+    list-style-type: disc;
+    margin-top: 20px;
+    padding-left: 20px;
+  }
+  .body--content--list li {
+    line-height: 1.5;
+    width: 350px;
+    font-size: 1.2rem;
+  }
+  .body--content-service {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    background-color: #e5e4e4;
+    width: 100%;
+    height: 300px;
+  }
+  .body-content--contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    width: 100%;
+    height: 300px;
+  }
+</style>
+<Header>
+  <!-- content -->
+  <div class="container__footer--content">
+    <p class="footer--content--title">Welcome to Scrolling Nav</p>
+    <p class="footer--content--desc">
+      A functional Bootstrap 5 boilerplate for one page scrolling websites
+    </p>
+    <p><Button /></p>
+  </div>
+  <!-- body-content -->
+  <div class="container__body--content">
+    <p class="body--content--title">About this page</p>
+    <p class="body--content--desc">
+      This is a great place to talk about your webpage. This template is
+      purposefully unstyled so you can use it as a boilerplate or starting point
+      for you own landing page designs! This template features:
+    </p>
+    <ul class="body--content--list">
+      <li>Clickable nav links that smooth scroll to page sections</li>
+      <li>
+        Responsive behavior when clicking nav links perfect for a one page
+        website
+      </li>
+      <li>
+        Bootstrap's scrollspy feature which highlights which section of the page
+        you're on in the navbar
+      </li>
+      <li>
+        Minimal custom CSS so you are free to explore your own unique design
+        options
+      </li>
+    </ul>
+  </div>
+  <!-- body--content--service -->
+  <div class="body--content-service">
+    <div>
+      <p class="body--content--title">Services we offer</p>
+      <p class="body--content--desc">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio
+        velit inventore, expedita quo laboriosam possimus ea consequatur vitae,
+        doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit
+        dignissimos.
+      </p>
+    </div>
+  </div>
+  <!-- body--content--contact -->
+  <div class="body-content--contact">
+    <div>
+      <p class="body--content--title">Contact us</p>
+      <p class="body--content--desc">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+        fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati
+        incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem,
+        in, quo totam.
+      </p>
+    </div>
+  </div>
+</Header>
+<Footer />
