--- a/index.astro
+++ b/index.astro
@@ -1,7 +1,7 @@
 ---
-import Button from "../components/button.astro";
-import Footer from "../layouts/Footer.astro";
-import Header from "../layouts/Header.astro";
+import Button from "./src/components/button.astro";
+import Footer from "./src/layouts/Footer.astro";
+import Header from "./src/layouts/Header.astro";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
